--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,9 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.9"
+pyssandra = "^0.12.4"
+python-dotenv = "^1.0.0"
+pyspark = "^3.5.0"
 
 
 [build-system]
